baml_language/crates/baml_tests/snapshots/diagnostic_errors/type_reflection_strict/baml_tests__diagnostic_errors__type_reflection_strict__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.assign_type_to_int(function_name: string) -> int  [expr] {
  { let x: int = baml.llm.get_return_type(function_name); return x }
}
function user.pass_type_as_string(function_name: string) -> string  [expr] {
  { let t = baml.llm.get_return_type(function_name); return t }
}
function user.type_to_type(function_name: string) -> type  [expr] {
  { let t: type = baml.llm.get_return_type(function_name); return t }
}
