baml_language/crates/baml_tests/snapshots/diagnostic_errors/type_reflection_strict/baml_tests__diagnostic_errors__type_reflection_strict__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 47296
---
=== PPIR ===
class user.User {
  name: string
}
class user.User$stream {
  name: string | null
}
function user.reflect_type_to_int() -> int  [expr] {
  { let x: int = type.of(); return x }
}
function user.too_many_type_args() -> type  [expr] {
  {  } type.of()
}
function user.unknown_type_in_reflect() -> type  [expr] {
  {  } type.of()
}
function user.assign_type_to_int(function_name: string) -> int  [expr] {
  { let x: int = baml.llm.get_return_type(function_name); return x }
}
function user.pass_type_as_string(function_name: string) -> string  [expr] {
  { let t = baml.llm.get_return_type(function_name); return t }
}
function user.type_to_type(function_name: string) -> type  [expr] {
  { let t: type = baml.llm.get_return_type(function_name); return t }
}
