baml_language/crates/baml_tests/snapshots/diagnostic_errors/type_reflection_strict/baml_tests__diagnostic_errors__type_reflection_strict__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.assign_type_to_int(function_name: string) -> int throws never {
  { : never
    let x = baml.llm.get_return_type(function_name) : type
    return x : type
  }
  !! 432..472: type mismatch: expected int, got type
  !! 485..486: type mismatch: expected int, got type
}
function user.pass_type_as_string(function_name: string) -> string throws never {
  { : never
    let t = baml.llm.get_return_type(function_name) : type
    return t : type
  }
  !! 702..703: type mismatch: expected string, got type
}
function user.type_to_type(function_name: string) -> type throws never {
  { : never
    let t = baml.llm.get_return_type(function_name) : type
    return t : type
  }
}
