baml_language/crates/baml_tests/snapshots/diagnostic_errors/type_reflection_strict/baml_tests__diagnostic_errors__type_reflection_strict__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type mismatch: expected int, got type
    ╭─[ reflect_intrinsic_errors.baml:13:12 ]
    │
 13 │     return x;
    │            ┬  
    │            ╰── type mismatch: expected int, got type
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: unresolved type: NonExistent
    ╭─[ reflect_intrinsic_errors.baml:17:45 ]
    │
 17 │ ╭─▶ function unknown_type_in_reflect() -> type {
 18 │ ├─▶     reflect.type_of<NonExistent>()
    │ │                                        
    │ ╰──────────────────────────────────────── unresolved type: NonExistent
    │     
    │     Note: Error code: E0002
────╯

  [type] Error: function `type_of` expects 1 type argument(s), got 2
    ╭─[ reflect_intrinsic_errors.baml:24:40 ]
    │
 24 │ ╭─▶ function too_many_type_args() -> type {
 25 │ ├─▶     reflect.type_of<int, string>()
    │ │                                        
    │ ╰──────────────────────────────────────── function `type_of` expects 1 type argument(s), got 2
    │     
    │     Note: Error code: E0005
────╯

  [type] Error: type mismatch: expected int, got type
   ╭─[ strict_normalization.baml:8:17 ]
   │
 8 │     let x: int = baml.llm.get_return_type(function_name);
   │                 ────────────────────┬───────────────────  
   │                                     ╰───────────────────── type mismatch: expected int, got type
   │ 
   │ Note: Error code: E0001
───╯

  [type] Error: type mismatch: expected int, got type
   ╭─[ strict_normalization.baml:9:12 ]
   │
 9 │     return x;
   │            ┬  
   │            ╰── type mismatch: expected int, got type
   │ 
   │ Note: Error code: E0001
───╯

  [type] Error: type mismatch: expected string, got type
    ╭─[ strict_normalization.baml:15:12 ]
    │
 15 │     return t;
    │            ┬  
    │            ╰── type mismatch: expected string, got type
    │ 
    │ Note: Error code: E0001
────╯
